[gd_scene load_steps=3 format=3 uid="uid://b3g28rsgsjcxx"]

[ext_resource type="Script" path="res://addons/aero_tools/uires/hud_ladder/hud_ladder.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bbseqfyuudt22" path="res://addons/aero_tools/uires/hud_ladder/hud_pitch_mark.tscn" id="2"]

[node name="HUDLadder" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Pivot" type="Node2D" parent="."]

[node name="MarkH00" parent="Pivot" instance=ExtResource("2")]
mark_pitch_value_visible = false
mark_line_gap = 0.0

[node name="MarkP05" parent="Pivot" instance=ExtResource("2")]
offset_top = -100.0
offset_bottom = -100.0
mark_line_length = 500.0
mark_pitch_value = 5.0

[node name="MarkN05" parent="Pivot" instance=ExtResource("2")]
offset_top = 100.0
offset_bottom = 100.0
mark_line_length = 500.0
mark_pitch_value = 5.0

[node name="MarkP10" parent="Pivot" instance=ExtResource("2")]
offset_top = -200.0
offset_bottom = -200.0
mark_line_length = 500.0
mark_pitch_value = 10.0

[node name="MarkN10" parent="Pivot" instance=ExtResource("2")]
offset_top = 200.0
offset_bottom = 200.0
mark_line_length = 500.0
mark_pitch_value = 10.0

[node name="MarkP20" parent="Pivot" instance=ExtResource("2")]
offset_top = -400.0
offset_bottom = -400.0
mark_line_length = 500.0
mark_pitch_value = 20.0

[node name="MarkN20" parent="Pivot" instance=ExtResource("2")]
offset_top = 400.0
offset_bottom = 400.0
mark_line_length = 500.0
mark_pitch_value = 20.0
